# blogapi

./: README.md  openapi-schema.yml  pyproject.toml
config/: settings.py  urls.py
posts/: permissions.py  serializers.py  tests.py  urls.py
posts/migrations/: 0001_initial.py
