[tool.poetry]
name = "blogapi"
version = "0.1.0"
description = ""
authors = ["Stepan Greenberg <stepan.greenberg@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=3.1.0"
djangorestframework = "~=3.11.0"
dj-rest-auth = "1.1.0"
django-allauth = "~=0.42.0"
PyYAML = "5.3.1"
uritemplate = "3.0.1"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
